# IN4110-projects

./: .gitignore  README.md
assignment1/: friendly_greeting.txt  gitconflict.txt
assignment2/: array_class.py  test_array.py
assignment3/: README.md  profile-report.md  pyproject.toml  setup.py  timing-report.txt
assignment3/instapy/: cli.py  cython_filters.c  cython_filters.html  cython_filters.pyx  importer.py  io.py  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assignment3/test/: conftest.py  test_cython.py  test_numba.py  test_numpy.py
assignment4/: collect_dates.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py  wiki_race_challenge.py
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/docs/: conf.py  http_cache.sqlite  strompris.rst
assignment5/docs/_build/doctrees/: environment.pickle  index.doctree  strompris.doctree
assignment5/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strompris.html
assignment5/docs/_build/html/_sources/: index.rst.txt
assignment5/templates/: strompris.html
assignment5/tests/: test_strompris.py
