[build-system]
requires = [
    "setuptools",
     "cython",
     "numpy>=1.21.*"
]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
requires-python = ">=3.7"
license = {text = "MIT License"}
name = "instapy"
description = 'instapy is an image processing modue that can transform a image using the grayscale or sepia transforms, scale/resize it, display and save to file.
For sepia transformations it supports scaling by a constant k = [0,1], where k=0 returns the original image and k=1 returns the sepia transformed image.
instapy supports four different implementations for the gray and sepia filters: pure Python, NumPy, Numba, Cython. It can also track the run time of the given implementation.'
readme = "README.md"
dependencies = [
	"numpy>=1.21.*",
	"numba>=0.56.*",
	"cython>=0.29.20",
	"Pillow>=9.2.0"
]


[project.scripts]
instapy = "instapy.instapy.cli:main"
